# req-hunter

./: .env.example  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_url_path_filter_to_sources.py  d8cb6f6038e7_add_sources_table.py  e4f7c9a2b1d0_add_scrape_schedules_table.py  f6a9b3c1d2e4_add_source_blocking_fields.py
app/: __init__.py  config.py  database.py  logging_utils.py  main.py  models.py  scheduler.py  schemas.py
app/routers/: jobs.py  logs.py  schedule.py  scrape.py  sources.py
app/scraper/: __init__.py  base.py  generic.py  runner.py  workday.py
app/static/: index.html
app/static/css/: app.css
app/static/js/: api.js  main.js  state.js  toast.js  utils.js
app/static/js/components/: jobs-view.js  logs-view.js  sources-view.js
