[build-system]
requires = ["setuptools>=72.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "req-hunter"
version = "0.1.0"
description = "Job listing scraper and aggregator with FastAPI viewer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "aiofiles>=24.0.0,<25.0.0",

    # Database (async)
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.14.0,<1.15.0",

    # Scraping
    "playwright>=1.49.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",

    # Config & environment
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    # Linting & formatting
    "ruff>=0.9.0,<0.10.0",

    # Testing
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "pytest-playwright>=0.7.0,<0.8.0",

    # Type checking
    "mypy>=1.14.0,<2.0.0",

    # Alembic sync migrations driver
    "psycopg2-binary>=2.9.0,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "B008",  # do not perform function calls in argument defaults (needed by FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
